--- a/index.html
+++ b/index.html
@@ -86,8 +86,163 @@ body{
                         <input type="text" name="" id="">
                     </div>
                 </td>
-             
              </tr>  
+         <tr>
+                <td d="g"style="width:2%;"></td>
+                <td>
+                   <span id= "green">*</span><b>Name as you would like it printed on card</b><span style="color: green;">(Prefix like Shri,Smt,Kumari,Late,Dr,CA,MS,Mr,Mrs,M/s,Alias etc. are not allowed)</span>
+                </td>
+            </tr>
+            <tr>
+                <td id="g"style="width:2%;"></td>
+                <td>
+                    <input type="text"style="width: 25%;">
+                </td>
+            </tr>
+            <tr>
+                <td id="g"style="width:2%;"></td>
+                <td>
+                   <span></span><b>Details of Parents.</b><span style="color: green;">(Prefix like Shri,Smt,Kumari,Late,Dr,CA,MS,Mr,Mrs,M/s,Alias etc. are not allowed)</span>
+                </td>
+            </tr>
+            <tr>
+                <th id="g"style="width:2%;"><input type="checkbox"></th>
+                <td>
+                 <span id="red">*</span><b>2. Father's Name</b><span style="color: green;">(Mandatory field. Even married women should give father's name only.)</span>
+                </td>
+            </tr>
+            <tr>
+                <td></td>
+                <td colspan="2"> 
+                    <div style="display:inline-block;">
+                        <b>Lastname/Surname</b><br>
+                        <input type="text" name="" id="">
+                    </div>
+                    <div style="display:inline-block;padding-left:200px">
+                        <b>FirstName</b><br>
+                        <input type="text" name="" id="">
+                    </div>
+                    <div style="display:inline-block;padding-left:200px">
+                        <b>MiddleName</b><br>
+                        <input type="text" name="" id="">
+                    </div>
+                </td>
+             </tr>  
+             <tr>
+                <th id="g"style="width:2%;"><input type="checkbox"></th>
+                <td>
+                 <span id="red">*</span><b>3. Mother's Name</b><span style="color: green;">(This Field is Optional)</span>
+                </td>
+            </tr>
+            <tr>
+                <td></td>
+                <td colspan="2"> 
+                    <div style="display:inline-block;">
+                        <b>Lastname/Surname</b><br>
+                        <input type="text" name="" id="">
+                    </div>
+                    <div style="display:inline-block;padding-left:200px">
+                        <b>FirstName</b><br>
+                        <input type="text" name="" id="">
+                    </div>
+                    <div style="display:inline-block;padding-left:200px">
+                        <b>MiddleName</b><br>
+                        <input type="text" name="" id="">
+                    </div>
+                </td>
+             </tr> 
+             <div style="font-weight: bold;">
+                <table style="width:100%">
+            <tr>
+                <td></td>
+                <td>
+                   <span id= "red">*</span><b>4.Select Parent name which is to be printed on the card</b><br><p> <span style="color: green;">(In case no option is provided then PAN card will be issued with father's name)</span></p>
+                </td>
+                <td><label for="father's name"style="font-weight:lighter;">Father Name</label>
+                    <input type="radio" name="type 4" id="father's name">
+                    <label for="mother's name"style="padding-left:20px;font-weight:lighter">Mother Name</label>
+                    <input type="radio" name="type 4" id="mother's name"></td>
+            </tr>
+            <tr>
+                <th><input type="checkbox"></th>
+                <td>
+                   <span id= "red">*</span><b>5.Date of Birth/incorporation/Agreement/Partnership</b><br>
+                <p><b>or Trust Deed/Formation of Body of individuals/</b><br>
+                <b>Association of Persons</b></p>
+                <td>
+                <input type="Date"style="align-content:center;"></td>
+                </td>
+                </tr>
+                <tr>
+                    <th><input type="checkbox"></th>
+                    <td>
+                    <span id="red">*</span><b>6.Gender</b>
+                    </td>
+                    <td><label for="Male"style="font-weight:lighter;">Male</label>
+                        <input type="radio" name="type 5" id="Male">
+                        <label for="Female"style="padding-left:20px;font-weight:lighter">Female</label>
+                        <input type="radio" name="type 5" id="Female">
+                    </td>
+                </tr>
+            </table>
+          </div>
+          <div style="font-weight: bold;">
+            <table style="width:100%">
+                         <tr>
+                            <th id="g"style="width:2%;"><input type="checkbox"></th>
+                            <td>
+                            <span style="color:black" position:relative;left: 10px;">7.Photo Mismatch</span>
+                            </td>
+                         </tr>
+                         <tr>
+                            <th><input type="checkbox"></th>
+                            <td>
+                            <span style="color:black" position:relative;left: 10px;" >8.Signature Mismatch</span>
+                         </tr>
+            </table>
+            </div>
+            <div style="font-weight: bold;">
+                <table style="width:100%">
+                         <tr>
+                            <th id="g"style="width:2%;"><input type="checkbox"></th>
+                            <td>
+                            <span id= "red">*</span>9.Address for Communication
+                            </td>
+                            <td><label for="Residental"style="font-weight:lighter;">Residental</label>
+                                <input type="radio" name="type 5" id="Residental">
+                                <label for="Office"style="padding-left:20px;font-weight:lighter;">Office</label>
+                                <input type="radio" name="type 5" id="Office">
+                                </td>
+                                 <tr>
+
+            </tr>
+            <tr>
+                <td id="g"style="width:2%;"></td>
+                <td><span></span><b>Office Name</b><span style="color:green;">(to be filled only case of office address)</span></td>
+                <td width="34%"><input type="text"style="width: 55%;"></td>
+            </tr>
+            <tr>
+                <td id="g"style="width:2%;"></td>
+                <td><span></span>Floor/Door/Block No.</td>
+                <td><input type="text"style="width: 55%;"></td>
+            </tr>
+            <tr>
+                <td id="g"style="width:2%;"></td>
+                <td><span></span>Name of Premises/Building/Village</td>
+                <td><input type="text"style="width: 55%;"></td>
+            </tr>
+            <tr>
+                <td id="g"style="width:2%;"></td>
+                <td><span></span>Road/Street/Lane/Post Office</td>
+                <td><input type="text"style="width: 55%;"></td>
+            </tr>
+            <tr>
+                <td id="g"style="width:2%;"></td>
+                <td><span></span>Area/Locality/Taluka/Sub-Division</td>
+                <td><input type="text"style="width: 55%;"></td>
+            </tr>
+        </table>
+        </div>
     </table>
 </body>
 </html>
