--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ body{
             <div style="font-weight: bold;">
                 <table style="width:100%">
                          <tr>
-                            <th id="g"style="width:2%;"><input type="checkbox"></th>
+                            <th id="g"style="width:2%;"><input type="checkbox"  value="Y" checked="" onclick="return false"></th>
                             <td>
                             <span id= "red">*</span>9.Address for Communication
                             </td>
